[package]
name = "primitives"
version = "2.4.2"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"

[features]
default = ["std"]
std = [
	"serde",
	"frame-system/std",
	"frame-support/std",
	"codec/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-consensus-aura/std",
	"xcm-executor/std",
	"xcm/std",
	"polkadot-parachain-primitives/std"
]

[dependencies]
serde = { version = "1.0.152", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive"
] }
frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
xcm = { package = "staging-xcm", workspace = true, default-features = false}
xcm-executor = { package="staging-xcm-executor", workspace = true, default-features = false }
polkadot-parachain-primitives = { workspace = true, default-features = false }
