[package]
name = "primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
	"serde",
	"frame-system/std",
	"frame-support/std",
	"codec/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-consensus-aura/std",
	"xcm-executor/std",
	"xcm/std",
	"polkadot-parachain-primitives/std"
]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false}
xcm-executor = { workspace = true, default-features = false }
polkadot-parachain-primitives = { workspace = true, default-features = false }
