[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
name = "nodle-chain-runtime"
version = "2.0.0"

[features]
default = ["std"]
std = [
  "cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm-handler/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "nodle-chain-primitives/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-amendments/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-emergency-shutdown/std",
  "pallet-grants/std",
  "pallet-identity/std",
  "pallet-indices/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-recovery/std",
  "pallet-reserve/std",
  "pallet-root-of-trust/std",
  "pallet-root-of-trust-runtime-api/std",
  "pallet-scheduler/std",
  "pallet-tcr/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-utility/std",
  "parachain-info/std",
  "parity-scale-codec/std",
  "polkadot-parachain/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-system-benchmarking",
  "pallet-allocations/runtime-benchmarks",
  "pallet-amendments/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-emergency-shutdown/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-root-of-trust/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-tcr/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

[dependencies]
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
nodle-chain-primitives = { default-features = false, path = "../primitives" }
pallet-allocations = { default-features = false, path = "../pallets/allocations" }
pallet-amendments = { default-features = false, path = "../pallets/amendments" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
pallet-grants = { default-features = false, path = "../pallets/grants" }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-mandate = { git = "https://github.com/ETeissonniere/pallet-mandate", branch = "rococo-v1", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-reserve = { default-features = false, path = "../pallets/reserve" }
pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-tcr = { default-features = false, path = "../pallets/tcr" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
parachain-info = { default-features = false, path = "../pallets/parachain-info" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
static_assertions = "1.1.0"
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }

[build-dependencies]
substrate-wasm-builder = "3.0.0"
