[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
name = "nodle-chain-runtime"
version = "2.0.1"

[features]
default = ["std"]
std = [
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "nodle-chain-primitives/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-amendments/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-babe/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-rpc-runtime-api/std",
  "pallet-emergency-shutdown/std",
  "pallet-grandpa/std",
  "pallet-grants/std",
  "pallet-identity/std",
  "pallet-im-online/std",
  "pallet-indices/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-offences/std",
  "pallet-poa/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-recovery/std",
  "pallet-reserve/std",
  "pallet-root-of-trust/std",
  "pallet-root-of-trust-runtime-api/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-staking/std",
  "pallet-tcr/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-utility/std",
  "parity-scale-codec/std",
  "pallet-curveless-staking/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-authority-discovery/std",
  "sp-consensus-babe/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-system-benchmarking",
  "pallet-allocations/runtime-benchmarks",
  "pallet-amendments/runtime-benchmarks",
  "pallet-babe/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-emergency-shutdown/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-root-of-trust/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-tcr/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-curveless-staking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
with-staking = [
	"pallet-curveless-staking",
]

[dependencies]
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
frame-executive = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
nodle-chain-primitives = { default-features = false, path = "../primitives" }
pallet-allocations = { default-features = false, path = "../pallets/allocations" }
pallet-amendments = { default-features = false, path = "../pallets/amendments" }
pallet-authority-discovery = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-babe = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false }
pallet-contracts = { version = "3.0.0", default-features = false }
pallet-contracts-primitives = { version = "3.0.0", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-grants = { default-features = false, path = "../pallets/grants" }
pallet-identity = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-mandate = { version = "2.0.8", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-multisig = { version = "3.0.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
pallet-poa = { default-features = false, path = "../pallets/poa" }
pallet-curveless-staking = { default-features = false, path = "../pallets/pallet-curveless-staking", optional = true }
pallet-proxy = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-recovery = { version = "3.0.0", default-features = false }
pallet-reserve = { default-features = false, path = "../pallets/reserve" }
pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
#pallet-session-benchmarking = { default-features = false, optional = true }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-tcr = { default-features = false, path = "../pallets/tcr" }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-utility = { version = "3.0.0", default-features = false }
parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
safe-mix = { version = "1.0.1", default-features = false }
serde = { version = "1.0.124", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-authority-discovery = { version = "3.0.0", default-features = false }
sp-consensus-babe = { version = "0.9.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-staking = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
static_assertions = "1.1.0"

[build-dependencies]
substrate-wasm-builder = "3.0.0"
