[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
name = "nodle-chain-runtime"
version = "2.0.7"

[features]
default = ["std"]
std = [
  "log/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "nodle-chain-primitives/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-amendments/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-babe/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-rpc-runtime-api/std",
  "pallet-emergency-shutdown/std",
  "pallet-grandpa/std",
  "pallet-grants/std",
  "pallet-identity/std",
  "pallet-im-online/std",
  "pallet-indices/std",
#   "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-offences/std",
  "pallet-poa/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-recovery/std",
  "pallet-reserve/std",
  "pallet-root-of-trust/std",
  "pallet-root-of-trust-runtime-api/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-staking/std",
  "pallet-tcr/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-utility/std",
  "parity-scale-codec/std",
  "pallet-curveless-staking/std",
  "safe-mix/std",
  "serde/std",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-authority-discovery/std",
  "sp-consensus-babe/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-system-benchmarking",
  "pallet-allocations/runtime-benchmarks",
  "pallet-amendments/runtime-benchmarks",
  "pallet-babe/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-emergency-shutdown/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-root-of-trust/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-tcr/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-curveless-staking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
with-staking = [
	"pallet-curveless-staking",
]

[dependencies]
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }

parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, features = ["derive"] }

safe-mix = { version = "1.0.1", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-recovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
nodle-chain-primitives = { default-features = false, path = "../primitives" }
pallet-allocations = { default-features = false, path = "../pallets/allocations" }
pallet-amendments = { default-features = false, path = "../pallets/amendments" }
pallet-reserve = { default-features = false, path = "../pallets/reserve" }
pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
pallet-tcr = { default-features = false, path = "../pallets/tcr" }
pallet-poa = { default-features = false, path = "../pallets/poa" }
pallet-curveless-staking = { default-features = false, path = "../pallets/pallet-curveless-staking", optional = true }
pallet-grants = { default-features = false, path = "../pallets/grants" }
# pallet-mandate = { version = "2.0.8", default-features = false }

frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }

[build-dependencies]
substrate-wasm-builder = "3.0.0"
