[package]
authors = { workspace = true }
edition = { workspace = true }
name = "support"
version = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
]
