[package]
authors.workspace = true
edition.workspace = true
name = "support"
version.workspace = true

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
]
